--- a/src/launcher/index.html
+++ b/src/launcher/index.html
@@ -51,8 +51,8 @@
         .withBorder {
             border: 1px solid black;
             padding: 10px;
-            padding-top: 10px;
-            padding-bottom: 10px;
+            padding-top: 5px;
+            padding-bottom: 5px;
             margin: 5px;
             border-radius: 10px;
         }
@@ -86,6 +86,14 @@
             font-size: 36px;
             text-align: center;
         }
+        ol {
+            margin-block-start: 0;
+            margin-block-end: 0;
+            padding-inline-start: 14px;
+        }
+        textarea {
+            margin-bottom: -4px;
+        }
     </style>
     <script src='js/launcher.js'></script>
 </head>
@@ -109,12 +117,14 @@
         </div>
         <div class="column">
             <div id="editorInfo" class="withBorder">
-                <div class="infoEditable editorInfoItem bigText">new editor</div>
+                <!-- <div class="infoEditable editorInfoItem bigText">new editor</div> -->
 
                 <div id="editorName" class="infoDisplayed bigText editorInfoItem"></div>
                 <div class="infoEditable editorInfoItem mediumText">name: <input id="editorNameInput"></input></div>
 
-                <div class="infoEditable editorInfoItem mediumText">location: <button id="editorPathInput">🔎</button></div>
+                <div class="infoEditable editorInfoItem mediumText">location: 
+                    <button id="editorPathInput" onclick="onSetEditorPath(event);">🔎</button>
+                </div>
                 <div id="editorPath" class="smallText infoEditable editorInfoItem"></div>
 
                 <div id="editorType"  class="smallText editorInfoItem infoDisplayed"></div>
@@ -122,9 +132,20 @@
                 <div id="editorDescription" class="infoDisplayed editorInfoItem mediumText"></div>
                 <div class="infoEditable editorInfoItem mediumText">description: <br> <textarea id="editorDescriptionInput"></textarea></div>
                 
+                <div id="locationTip" class="smallText infoEditable editorInfoItem">
+                    <ol>
+                        <li>download and unzip bitsy or one of its forks</li>
+                        <li>click &quot;🔎&quot;, open that folder with bitsy you got in step 1</li>
+                        <li>if you see &quot;editor&quot; folder inside, open it too</li>
+                        <li>select &quot;index.html&quot;</li>
+                    </ol>                        
+                </div>
+                <div id="newEditorWarning" class="editorInfoItem smallText">to add a new editor, you need to set its name and location</div>
+
                 <div class="infoEditable editorInfoItem">
                     <button id="confirmEditorButton" onclick="onConfirmEditor(event);">👍</button>
-                    <button id="cancelEditorButton" onclick="onCancelEditor(event);">✖️</button>
+                    <button id="cancelEditorButton" onclick="onCancelEditor(event);">↩️</button>
+                    <button id="editorTipToggle" onclick="onToggleEditorTip(event);">ℹ️</button>
                 </div>
             </div>
         </div>
