--- a/src/launcher/index.html
+++ b/src/launcher/index.html
@@ -5,127 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>bitsy-savior</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <style>
-        @font-face {
-            font-family: "Nunito";
-            src: url("font/Nunito-Regular.ttf");
-        }
-
-        body {
-            font-family: "Nunito", Helvetica, Arial, sans-serif;
-            background-color: lavenderblush;
-        }
-        button {
-            font-family: sans-serif;
-            text-align: center;
-        }
-        .bigText {
-            font-size: 24px;
-        }
-        .mediumText {
-            font-size: 16px;
-        }
-        .smallText {
-            font-size: 12px;
-            font-style: italic;
-        }
-        .editorInfoItem {
-            margin-bottom: 5px;
-        }
-        #buttons {
-            margin-top: 5px;
-            padding-left: 5px;
-        }
-        #editorDescriptionInput {
-            padding: 0px;
-            width: 100%;
-            height: 72px;
-        }
-        #editorNameInput {
-            min-width: 0px;
-            width: 100%;
-            margin-left: 5px;
-        }
-        .row {
-            display: flex;
-        }
-        .column {
-            flex: 50%;
-            height: min-content;
-        }
-        .withBorder {
-            border: 1px solid black;
-            padding: 10px;
-            padding-top: 5px;
-            padding-bottom: 5px;
-            margin: 5px;
-            border-radius: 10px;
-        }
-        .header {
-            padding-top: 10px;
-            padding-bottom: 10px;
-        }
-        #editorInfo {
-            padding-bottom: 5px;
-        }
-        input[type="radio"] {
-            -webkit-appearance: none;
-            -moz-appearance: none;
-            appearance: none;
-            display: none;
-        }
-        input[type="radio"]:checked + label {
-            background-color: lightpink;
-        }
-        .editorListLabel:hover {
-            background-color: rgb(255,211,214);
-        }
-        .editorListLabel {
-            display: block;
-            padding-left: 5px;
-        }
-        .credits {
-            text-align: center;
-        }
-        .title {
-            font-size: 36px;
-            text-align: center;
-        }
-        ol {
-            margin-block-start: 0;
-            margin-block-end: 0;
-            padding-inline-start: 14px;
-        }
-        textarea {
-            /* margin-bottom: -4px; */
-            font-family: Nunito, Helvetica, Arial, sans-serif;
-            font-size: 16px;
-            /* border:1px solid rgb(255,211,214); */
-            border:1px solid black;
-            border-radius: 2px;
-            background-color:rgb(255,248,250);
-        }
-        textarea:focus {
-            outline: none !important;
-            /* border:1px solid rgb(255,211,214); */
-            border:1px solid black;
-            border-radius: 2px;
-        }
-        input {
-            font-family: Nunito, Helvetica, Arial, sans-serif;
-            font-size: 16px;
-            /* border:1px solid rgb(255,211,214); */
-            border:1px solid black;
-            border-radius: 2px;
-            background-color: rgb(255,248,250);
-        }
-        input:focus {
-            outline: none !important;
-            /* border:1px solid rgb(255,211,214); */
-            border:1px solid black;
-            border-radius: 2px;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="css/style.css" media="screen"/>
     <script src='js/launcher.js'></script>
 </head>
 <body>
@@ -136,8 +16,6 @@
     <div class="row">
         <div class="column withBorder">
             <form id="editorList">
-                <!-- <input type="radio" id="editorX" name="editor">
-                <label for="editorX">Bitsy</label><br> -->
             </form>
             <div id="buttons" class="bigText">
                 <button onclick="onRunEditor(event);">▶️</button>
